--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,16 @@
   }],
   "web_accessible_resources" : ["bt_inPage.js"],
   "browser_action": {
-    "default_title": "Boomi Tools"
+    "default_title": "Boomi Tools",
+    "default_icon": {
+      "19": "img/BoomiTools_19.png",
+      "38": "img/BoomiTools_38.png"
+    }
+  },
+  "icons": {
+    "16": "img/BoomiTools_16.png",
+    "48": "img/BoomiTools_48.png",
+   "128": "img/BoomiTools_128.png"
   },
   "manifest_version": 2
 }
